Fix board image on small screens

--- a/src/Styles/board.less
+++ b/src/Styles/board.less
@@ -6,7 +6,7 @@
   .board-view {
     flex-grow: 1;
     width: 100%;
-    padding-bottom: 80px;
+    padding: 2rem 0 80px 0;
 
     .board-section-title {
       margin-top: 2rem;
@@ -18,9 +18,39 @@
 
   .board-main-image {
     display: block;
-    margin: 2rem auto;
-    max-height: 200px;
+    margin: auto;
     max-width: 100%;
-    min-width: 200px;
+
+    @media (min-width: @tablet-display-width) {
+      max-height: 200px;
+      min-width: 200px;
+    }
+  }
+
+  .board-image-upload-container {
+    position: absolute;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+  }
+
+  .board-image-upload {
+    display: block;
+    margin: 2rem auto;
+    max-height: fit-content;
+  }
+
+  .board-image-upload-overlay {
+    .board-image-upload();
+    position: relative;
+    margin: 0;
+    height: 100%;
+    top: 0;
+    opacity: 0;
+
+    &:hover {
+      transition: opacity ease-out 800ms;
+      opacity: .8;
+    }
   }
 }
