--- a/src/Styles/global.less
+++ b/src/Styles/global.less
@@ -111,24 +111,6 @@
 
 /* Visuals */
 
-.board-image-upload {
-  display: block;
-  margin: 2rem auto;
-  max-height: fit-content;
-}
-
-.board-image-upload-overlay {
-  .board-image-upload();
-  position: absolute;
-  top: 0;
-  opacity: 0;
-
-  &:hover {
-    transition: opacity ease-out 800ms;
-    opacity: .8;
-  }
-}
-
 .component-image {
   display: block;
   margin-left: auto;
